# rusrus

./: Cargo.toml  main.py
maths/: Cargo.toml
maths/src/: fib_matriz.rs  main.rs  three_x_plus_one.rs
src/: 3xp1.rs  fib.rs  main.rs  main2.rs
stuff/: main.py
stuff/src/: fib_matriz.rs
