[package]
name = "rusrus-maths"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusrus-maths"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.14"
num = "0.4.0"
rayon = "1.5.1"
